added better display ip

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,10 +58,8 @@ services:
     container_name: gui-api
     stdin_open: true
     # launch VcXSrv.exe [multiple windows, start no client, Clipboard & Primary Selection & Native Opengl & Disable access control ]
-    # Altermate Setup from https://sourceforge.net/p/vcxsrv/wiki/VcXsrv%20%26%20Win10/ with WSL2
-    # -> export DISPLAY=$(/sbin/ip route | awk '/default/ { print $3 }'):0 && echo $DISPLAY => IP Needed
     environment:
-      - DISPLAY=IP-ADRESS:0
+      - DISPLAY=host.docker.internal:0.0
       - CONTROLLERHTTPSERVER=controller-api:8081
       - MODELHTTPSERVER=model-api:8080
       - PICTUREPATH=src/main/scala/Battleship/aview/gui/media/BattleShipPicture.png
