--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     build:
       context: ./DBDockerfiles
       dockerfile: ./Dockerfile
+    ports:
+      - "3306:3306"
     image: mysqldatabase:latest
     container_name: mysqldatabase
 
@@ -30,7 +32,10 @@ services:
     depends_on:
       - mysqldatabase
     environment:
-      - DATABASEHOST=rootdb:3306
+      - DATABASE_HOST=mysqldatabase:3306
+      - MYSQL_DATABASE=battleship
+      - MYSQL_USER=battleship
+      - MYSQL_PASSWORD=battleship
 
   controller-api:
     build:
