added env for maingame

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     stdin_open: true
     environment:
       - CONTROLLERHTTPSERVER=controller-api:8081
+      - GAMEMODE=docker
 
   mysqldatabase:
     build:
