--- a/DBDockerfiles/MongoDbDocker/Dockerfile
+++ b/DBDockerfiles/MongoDbDocker/Dockerfile
@@ -1,9 +1,9 @@
 FROM mongo:latest
 EXPOSE 27017
 
-ENV MONGODB_DATABASE=battleship
-ENV MONGO_INITDB_ROOT_USERNAME=battleship
-ENV MONGO_INITDB_ROOT_PASSWORD=battleship
+ENV MONGO_INITDB_DATABASE=battleship
+#ENV MONGO_INITDB_ROOT_USERNAME=battleship
+#ENV MONGO_INITDB_ROOT_PASSWORD=battleship
 
 ENV TZ=Europe/Amsterdam
 
